# maze-search-visualizer

./: Cargo.toml
docs/: README.md
src/: main.rs
src/application/: mod.rs
src/maze/: generate_maze.rs  mod.rs
src/maze/searcher/: astar.rs  bfs.rs  dfs.rs  mod.rs
src/utils/: mod.rs  palette.rs
src/visualizer/: mod.rs
ui/: appwindow.slint  maze.slint  menu.slint
